[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/server.rs"
name = "kvs"
doc = false

[[bin]]
path = "src/client.rs"
name = "kvc"
doc = false

[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
prost = "0.9.0" # 处理 protobuf 的代码
tracing = "0.1" # 日志处理
dashmap = "4"
thiserror = "1"
http = "0.2"
sled = "0.34" # sled db
flate2 = "1" # gzip 压缩
tokio = { version = "1", features = ["full"] } # 异步网络库
tokio-rustls = "0.22"
rustls-native-certs = "0.5"
tokio-util = { version = "0.6", features = ["compat"] } # tokio 和 futures 的兼容性库
yamux = "0.9"
tokio-stream = "0.1.14" # yamux 多路复用支持
futures = "0.3"
serde = { version = "1", features = ["derive"] } # 序列化和反序列化
toml = "0.5" # toml支持
anyhow = "1" # 错误处理 # 日志处理
opentelemetry-jaeger = "0.15"
tracing-appender = "0.1"
tracing-opentelemetry = "0.15"
tracing-subscriber = {version = "0.2", features = ["json", "chrono"]} # 日志处理

[dev-dependencies]
async-prost = "0.3.0" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
tokio-util = { version = "0.6", features = ["codec"]}
certify = "0.3"
criterion = {version = "0.3", features = ["async_futures", "async_tokio", "html_reports"]} # benchmark
rand = "0.8" # 随机数处理

[build-dependencies]
prost-build = "0.9.0"

[[bench]]
name = "pubsub"
harness = false